fixing alignment of menu buttons

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -60,8 +60,12 @@ a.section_button {
 
 .menu-btn {
   color: white;
-  width: 100%;
-  margin: 2rem 1rem;
+  width: 80%;
+  margin: 3rem auto;
+}
+
+.menu-btn + .menu-btn {
+  margin-top: 0;
 }
 
 .progress_section {
